# yabu-tomoyoshi-introductory-econometrics

./: .gitconfig  .gitignore  README.md  pyproject.toml
python/: gay.ipynb  growth.ipynb  height.ipynb  oil.ipynb  rent.ipynb  requirements.txt  stockprice.ipynb
python/src/: black.ipynb  election.ipynb  suicide.ipynb
src/python/: cons.ipynb  dailyint.ipynb  demography.ipynb  election.ipynb  growth.ipynb  laborsupply.ipynb  marriage.ipynb  money.ipynb  monthlyint.ipynb  mwage.ipynb  oil.ipynb  participation.ipynb  protection.ipynb  spread.ipynb  spurious.ipynb  star.ipynb  stayhome.ipynb  suicidej.ipynb  timss.ipynb  var_stockprice.ipynb
src/r/: black.R  cons.R  dailyint.R  demography.R  election.R  gay.R  growth.R  height.R  laborsupply.R  marriage.R  money.R  monthlyint.R  mwage.R  oil.R  participation.R  protection.R  rent.R  spread.R  spurious.R  star.R  stayhome.R  stockprice.R  suicide.R  suicidej.R  timss.R  var_stockprice.R
src/stata/: black.do  cons.do  dailyint.do  demography.do  election.do  gay.do  growth.do  height.do  laborsupply.do  marriage.do  money.do  monthlyint.do  mwage.do  myirf.irf  oil.do  participation.do  protection.do  rent.do  spread.do  spurious.do  star.do  stayhome.do  stockprice.do  suicide.do  suicidej.do  timss.do  var_stockprice.do
