[tool.poetry]
name = "yabu-tomoyoshi-introductory-econometrics"
version = "0.1.0"
description = ""
authors = ["Keisei Akiya <keisei.akiya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.1.1"
statsmodels = "^0.14.3"
rdrobust = "^1.3.0"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
linearmodels = "^6.0"
scipy = "^1.14.1"
jupyter = "^1.1.1"
arch = "^7.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
